first heroku commit

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.18.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-router": "^3.0.5",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
@@ -45,7 +48,6 @@
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.3"
   },
-  
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
@@ -77,7 +79,9 @@
     }
   },
   "babel": {
-    "plugins": ["react-relay"],
+    "plugins": [
+      "react-relay"
+    ],
     "presets": [
       "react-app"
     ]
@@ -86,4 +90,3 @@
     "extends": "react-app"
   }
 }
-
