--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "konva": "^1.6.3",
     "material-ui": "^0.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-konva": "^1.1.3",
     "react-router": "^3.0.5",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "styled-components": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
