--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-lock": "^10.16.0",
+    "history": "^4.6.1",
     "konva": "^1.6.3",
     "material-ui": "^0.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-konva": "^1.1.3",
+    "react-relay": "^1.0.0",
+    "react-relay-network-layer": "^2.0.1",
     "react-router": "^3.0.5",
+    "react-router-relay": "^0.14.0",
     "react-tap-event-plugin": "^2.0.1",
     "styled-components": "^2.0.0"
   },
